<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnCalcular2"
        android:layout_width="193dp"
        android:layout_height="57dp"
        android:backgroundTint="@color/btnCalcular"
        android:onClick="calcular"
        android:text="@string/btnCalcular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.814"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/titulo"
        android:layout_width="327dp"
        android:layout_height="119dp"
        android:text="Calculadora Radio Button"
        android:textAlignment="center"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025" />

    <EditText
        android:id="@+id/number_a"
        android:layout_width="244dp"
        android:layout_height="83dp"
        android:ems="10"
        android:hint="@string/number_a"
        android:inputType="numberDecimal"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.592"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.216" />

    <EditText
        android:id="@+id/number_b"
        android:layout_width="244dp"
        android:layout_height="83dp"
        android:ems="10"
        android:hint="@string/number_b"
        android:inputType="numberDecimal"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.592"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.367" />

    <RadioGroup
        android:id="@+id/radiobtnGroup"
        android:layout_width="275dp"
        android:layout_height="207dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.61"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.652">

        <RadioButton
            android:id="@+id/btnSumar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnSumar"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/btnRestar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnRestar"
            android:textAlignment="textStart"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/btnMultiplicar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnMultiplicar"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/btnDividir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnDividir"
            android:textSize="20sp" />

    </RadioGroup>

    <TextView
        android:id="@+id/resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resultado"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.895" />

    <Button
        android:id="@+id/btnClear"
        android:layout_width="84dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/btnClear"
        android:onClick="reset"
        android:text="@string/btnClear"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.951"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <Switch
        android:id="@+id/cambiarPantallaBtn"
        android:layout_width="194dp"
        android:layout_height="61dp"
        android:onClick="cambiarPantallaSpinner"
        android:text="@string/cambiarPantallaBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.073"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.992" />


</androidx.constraintlayout.widget.ConstraintLayout>